<resources>

    <string name="app_name">SimpleReader</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="font_small">Small font</string>
    <string name="font_big">Big font</string>

    <string name="share">Share</string>

    <string name="menu_item_fonts">Fonts</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_search">Search</string>

    <string name="settings_synch">Synchronise Data</string>
    <string name="settings_server">server:</string>
    <string name="settings_user">username:</string>
    <string name="settings_password">password:</string>
    <string name="settings_frequency">sync:</string>
    <string name="hint_frequency">mins between syncs (0 = never)</string>
    <string name="settings_server_hint">server.name:port</string>
    <string name="sync_now">Sync Now</string>
    <string name="server_test">Test Server</string>
    <string name="server_test_ok">Server test successful</string>
    <string name="server_test_fail">Server test failed</string>
    <string name="server_sync_start">Sync started…</string>
    <string name="server_sync_ok">Sync complete</string>
    <string name="server_sync_fail">Sync failed</string>

    <string name="search_hint">Search In Book</string>
    <string name="dictionary_hint">Enter word to define</string>

    <string name="details">Details</string>
    <string name="close">Close</string>

    <string name="sample_font_text">And so of larger—Darknesses—</string>
    <string name="home">Home</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="add_bookmark">add bookmark</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete?</string>
    <string name="no_search_results">No search results</string>
    <string name="search">Search</string>
    <string name="highlight">Highlight/Define</string>

    <!-- error strings -->
    <string name="opening_publication_cannot_render">Cannot render publication.</string>
    <string name="opening_publication_audio_engine_initialization">Could not open publication because audio engine initialization failed.</string>

    <string name="publication_error_unsupported_asset">Asset format is not supported</string>
    <string name="publication_error_restricted">You are not allowed to open this publication</string>
    <string name="publication_error_out_of_memory">There is not enough memory on this device to open the publication.</string>
    <string name="publication_error_scheme_not_supported">Publication source is not supported.</string>
    <string name="publication_error_invalid_publication">Publication looks corrupted.</string>
    <string name="publication_error_unexpected">An unexpected error occurred.</string>

    <string name="publication_error_network_forbidden">Server denied access to a resource.</string>
    <string name="publication_error_network_not_found">A resource has not been found on the server.</string>
    <string name="publication_error_network_unreachable">Server cannot be reached.</string>
    <string name="publication_error_network_timeout">Server was too long to respond.</string>
    <string name="publication_error_network_ssl_handshake">A SSL error occurred.</string>
    <string name="publication_error_network_unexpected">An unexpected network error occurred.</string>

    <string name="publication_error_filesystem_not_found">A file has not been found.</string>
    <string name="publication_error_filesystem_forbidden">You are not allowed to access the file.</string>
    <string name="publication_error_filesystem_unexpected">An unexpected filesystem error occurred.</string>
    <string name="publication_error_filesystem_insufficient_space">There is not enough space left on the device.</string>
    <string name="pink_highlight">Pink Highlight</string>
    <string name="green_highlight">Green Highlight</string>
    <string name="blue_highlight">Blue Highlight</string>
    <string name="yellow_highlight">Yellow Highlight</string>
    <string name="define">Define</string>
    <string name="note">Note</string>
    <string name="copy">Copy</string>
    <string name="exit">Exit</string>
    <string name="table_of_contents">Table of Contents</string>
    <string name="loading">Loading…</string>
    <string name="goto_page">go to page</string>
    <string name="current_bookmark">Current Bookmark</string>

</resources>
