<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.simplereader.reader.ReaderActivity">

    <item
        android:id="@+id/itemProgress"
        android:title=""
        app:showAsAction="always"
        tools:showAsAction="always"
        app:actionLayout="@layout/action_progress"/>

    <item
        android:id="@+id/itemSearch"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_item_search"
        app:showAsAction="ifRoom"
        tools:showAsAction="always" />

    <item
        android:id="@+id/itemBookmarks"
        android:icon="@drawable/ic_bookmark"
        android:title="@string/bookmarks"
        app:showAsAction="ifRoom"
        tools:showAsAction="always" />

    <item
        android:id="@+id/itemHighlight"
        android:icon="@drawable/ic_highlight"
        android:title="@string/highlight"
        app:showAsAction="ifRoom"
        tools:showAsAction="always" />

    <item
        android:id="@+id/itemNote"
        android:icon="@drawable/ic_note"
        android:title="@string/note"
        app:showAsAction="ifRoom"
        tools:showAsAction="always" />

    <item
        android:id="@+id/itemFonts"
        android:icon="@drawable/icon_font"
        android:title="@string/menu_item_fonts"
        app:showAsAction="ifRoom"
        tools:showAsAction="always" />

    <item
        android:id="@+id/itemSettings"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_item_settings"
        app:showAsAction="ifRoom"
        app:iconTint="@color/primary_color"
        tools:showAsAction="always" />

</menu>