<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:background="@android:color/white"
android:padding="16dp">

    <!-- Sidepanel for bookmarks and highlights -->
    <LinearLayout
        android:id="@+id/sidepanel_content"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/sidepanel_label"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <!-- Delete Confirmation Content -->
    <LinearLayout
        android:id="@+id/delete_confirm_layout"
        android:orientation="horizontal"
        android:visibility="gone"
        android:background="#E0E0E0"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_weight="1"
            android:text="@string/delete"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/delete_cancel"
            android:src="@drawable/ic_red_cross"
            android:contentDescription="@string/cancel"
            android:padding="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/delete_confirm"
            android:src="@drawable/ic_green_tick"
            android:contentDescription="@string/confirm"
            android:padding="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</FrameLayout>
